--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
     </div>
 
     <div class="copyrights">
-        <p>© 2017 YDirection Themes by IOThemes</p>
+        <p>Made with Html & Css</p>
     </div>
 </body>
 </html>
